# llmops

./: .env.example  .gitignore  Makefile  README.md  config.py  main.py  pyproject.toml  questions.txt
data/: download_data.py
rag/: __init__.py  evaluation.py  prompts.yml  prompts_2.yml  storage.py  workflow.py
services/: docker-compose.yml
services/mlflow/: docker-compose.yml
services/qdrant/: docker-compose.yml
